export const SERVICE_NAME = 'mollip';
